New EdgePredicate queries using language server edges (#6)
1. Compiler Layer rewrite
2. Finite automata graph traversals
3. Repeated EdgePredicates
4. One command indexing